@@ -1,4 +1,4 @@
 DIST maven-plugin-api-2.0.tar.bz2 10189 RMD160 d1bcc8e95412d2f08f88e3e936e9f80572327642 SHA1 7d189a8fb3b2d048dc3bdc9c78a52ec7ae138954 SHA256 6fbb37d8abb3f58ffbb1c98bcebd0ec25b9bca01112ff606ae4cc4d537145a2c
-EBUILD maven-plugin-api-2.0.ebuild 505 RMD160 65049c17bb0319c3102177394cb22a07cb5dfdc7 SHA1 fcfa78b0508f2d1de6d1f9a99b492938e4b0234f SHA256 cfeb943f00d62d45470bb949b9c37bd8a27242b5ec4dc74acc4061de0baa2581
-MISC ChangeLog 261 RMD160 2dc3957117e9c4436c70383e025f903a5c65abe1 SHA1 cc868f9c25179e6ad6246ea9e18b7348437ef970 SHA256 d44bf7fd99fba5f25bea15ad3657e327b6e7828cea7f8ef97a8c3692ff10f171
+EBUILD maven-plugin-api-2.0.ebuild 526 RMD160 21de4fb1b2005c844e67bdaf6e30e1190403bde9 SHA1 8ce4e8c1485dda0c37b161571abdc44d064d7fd7 SHA256 d7597b355d4427f2e9ea1031c1314ab319473a7d381f7e9f177743d8061b56dc
+MISC ChangeLog 368 RMD160 3811143bed8c99bd0d83c0bd478d5299e9563619 SHA1 b3883187da09412dfaad8e8d2756aeec88469ffc SHA256 f4c0030bd6fec94c929f7ea59a27eb75467653d9fd6c59e76924fd84aa289f11
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
